# lazarillo-embedded

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: ProjectSetup.cmake
lazarillo-admin/: app.js  package.json
lazarillo-hmi/: .clang-format  CMakeLists.txt  lazarillo-hmi_es_ES.ts
lazarillo-hmi/gui/: Button_ChangeSkin.qml  FilteredIcon.qml  FooterMenu.qml  img.qrc  main.qml  qml.qrc
lazarillo-hmi/gui/img/: credits.txt
lazarillo-hmi/inc/: service.h
lazarillo-hmi/inc/lazarillo-hmi/: service.h
lazarillo-hmi/src/: main.cpp  service.cpp
lazarillo-hmi/src/message_receivers/: event_reboot_receiver.cpp  event_reboot_receiver.h
lazarillo-hmi/src/utils/: style.cpp  style.h
lazarillo-utils/: CMakeLists.txt
lazarillo-utils/inc/lazarillo-utils/: datetime.h
lazarillo-utils/src/: datetime.cpp
messages-definition/: CMakeLists.txt
messages-definition/inc/: base_message.h  event_reboot.h
messages-definition/inc/messages-definition/: base_message.h  event_connection_status.h  event_reboot.h  i_base_message.h  message_header.h
messages-definition/inc/messages-definition/factory/: message_factory.h
messages-definition/inc/models/: connection_status.h
messages-definition/inc/topics/: topics.h
messages-definition/src/: base_message.cpp  i_base_message.cpp
messages-definition/src/factory/: message_factory.cpp
messaging-broker/: CMakeLists.txt
messaging-broker/inc/messaging-broker/: broker.h  broker_helper.h  i_msg_receiver.h  i_receiver.h  redis_dispatcher.h  redis_receiver.h
messaging-broker/inc/messaging-broker/pubsub/: i_message_receiver.h  i_pub_sub_publisher.h  i_pub_sub_subscriber.h  msg_publisher.h  msg_subscriber.h  pubsub_factory.h  receiver_worker.h
messaging-broker/inc/messaging-broker/pubsub/raw_messages/: i_raw_data_processor.h  i_raw_data_receiver.h
messaging-broker/inc/messaging-broker/serialization/: json_deserializer.h  json_serializer.h  serialization_factory.h
messaging-broker/src/: broker.cpp  redis_dispatcher.cpp  redis_receiver.cpp
messaging-broker/src/pubsub/: msg_publisher.cpp  msg_subscriber.cpp  pubsub_factory.cpp  receiver_worker.cpp
messaging-broker/src/serialization/: json_deserializer.cpp  json_serializer.cpp  serialization_factory.cpp
motor-manager/: CMakeLists.txt
serialization/: CMakeLists.txt
serialization/inc/serialization/: deserializer.h  i_serializer.h  serializable.h  serializer.h
serialization/src/: deserializer.cpp  serializer.cpp
service-base/: CMakeLists.txt
service-base/inc/service-base/: service_base.h  service_messager.h
service-base/src/: service_base.cpp  service_messager.cpp
test_env/: Dockerfile  docker-compose.yml  start_test_env.sh
web-gateway/: CMakeLists.txt
web-gateway/inc/: websocket_client.h
web-gateway/inc/web-gateway/: service.h  websocket_server.h
web-gateway/src/: main.cpp  service.cpp  websocket_client.cpp  websocket_server.cpp
